--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.png" alt="">
         </span>
       </a>
+	<h2 class="mb-5">MENU GALLERY </h2>    
+	    
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
