--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 <tr>  
 <td><div style="text-align: center; width: 100px; height: 120px; background-color:#C0E7F9; border: 3px solid rgb(255, 255, 255);"><font color="#111111"><b>V-1</b></font> <img src="https://i.postimg.cc/s2xyLsdp/anigif.gif" style="font-size: 1rem;"> </div></td>
 
-<td><div style="text-align: center; width: 100px; height: 120px; background-color:#C0E7F9; border: 3px solid rgb(255, 255, 255);"><font color="#111111"><b>V-2</b></font> <img src="" style="font-size: 1rem;"> </div></td>
+<td><div style="text-align: center; width: 100px; height: 120px; background-color:#C0E7F9; border: 3px solid rgb(255, 255, 255);"><font color="#111111"><b>V-2</b></font> <img src="https://img.xatblog.net/image/LR5ShVYMuVQ.gif" style="font-size: 1rem;"> </div></td>
 
 <td><div style="text-align: center; width: 100px; height: 120px; background-color:#C0E7F9; border: 3px solid rgb(255, 255, 255);"><font color="#111111"><b>V-3</b></font> <img src="" style="font-size: 1rem;"> </div></td>
 
