--- a/index.html
+++ b/index.html
@@ -123,6 +123,23 @@
 
    <tbody>
 <tr>  
+<td><div style="text-align: center; width: 100px; height: 120px; background-color:#C0E7F9; border: 3px solid rgb(255, 255, 255);"><font color="#111111"><b>BT-204</b></font> <img src="https://i.postimg.cc/jSXGgmWK/anigif.gif" style="font-size: 1rem;"> </div></td>
+
+<td><div style="text-align: center; width: 100px; height: 120px; background-color:#C0E7F9; border: 3px solid rgb(255, 255, 255);"><font color="#111111"><b>BT-205</b></font> <img src="https://i.postimg.cc/FzkZMWhT/anigif.gif" style="font-size: 1rem;"> </div></td>
+
+<td><div style="text-align: center; width: 100px; height: 120px; background-color:#C0E7F9; border: 3px solid rgb(255, 255, 255);"><font color="#111111"><b>BT-206</b></font> <img src="https://i.postimg.cc/fLnqwQg6/anigif.gif" style="font-size: 1rem;"> </div></td>
+
+<td><div style="text-align: center; width: 100px; height: 120px; background-color:#C0E7F9; border: 3px solid rgb(255, 255, 255);"><font color="#111111"><b>BT-207</b></font> <img src="https://i.postimg.cc/qRpvqLQQ/anigif.gif" style="font-size: 1rem;"> </div></td>
+<td><div style="text-align: center; width: 100px; height: 120px; background-color:#C0E7F9; border: 3px solid rgb(255, 255, 255);"><font color="#111111"><b>BT-208</b></font> <img src="https://i.postimg.cc/6qtKY5F0/anigif.gif" style="font-size: 1rem;"> </div></td>
+<td><div style="text-align: center; width: 100px; height: 120px; background-color:#C0E7F9; border: 3px solid rgb(255, 255, 255);"><font color="#111111"><b>BT-213</b></font> <img src="https://i.postimg.cc/3NX9vVpj/anigif.gif" style="font-size: 1rem;"> </div></td>
+<td><div style="text-align: center; width: 100px; height: 120px; background-color:#C0E7F9; border: 3px solid rgb(255, 255, 255);"><font color="#111111"><b>BT-214</b></font> <img src="https://i.postimg.cc/QxnKqSbc/anigif.gif" style="font-size: 1rem;"> </div></td>
+<td><div style="text-align: center; width: 100px; height: 120px; background-color:#C0E7F9; border: 3px solid rgb(255, 255, 255);"><font color="#111111"><b>BT-215</b></font> <img src="https://i.postimg.cc/zvb8V3wm/anigif.gif" style="font-size: 1rem;"> </div></td>
+
+
+	
+</tr> 	   
+	   
+<tr>  
 <td><div style="text-align: center; width: 100px; height: 120px; background-color:#C0E7F9; border: 3px solid rgb(255, 255, 255);"><font color="#111111"><b>V-11</b></font> <img src="https://img.xatblog.net/image/QeAmxGSz1.gif" style="font-size: 1rem;"> </div></td>
 
 <td><div style="text-align: center; width: 100px; height: 120px; background-color:#C0E7F9; border: 3px solid rgb(255, 255, 255);"><font color="#111111"><b>V-12</b></font> <img src="https://img.xatblog.net/image/VKYYK5Kk7Z.gif" style="font-size: 1rem;"> </div></td>
