--- a/index.html
+++ b/index.html
@@ -1181,7 +1181,7 @@
       </section>
 
     </div>
- <p style="font-size:160%; color:red;" >All right reserved for this Gallery Theme to Sephiroth (iSephir007- 70007000) Do not copy without permission!</p>
+ <p style="font-size:160%; color:red;" >All right reserved for this Gallery Theme to  (Sephirroth- 70007000) Do not copy without permission!</p>
  <p style="font-size:160%; color:red;" >Using Any part of this Theme on your xatspace, without my permission, WILL result in REPORT and Block for your xatspace.</p>
  <p style="font-size:160%; color:red;" > Thank you!</p>
 	
