--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <a class="nav-link js-scroll-trigger" target="_blank" href="https://flic.kr/s/aHBqjzxTnK">Fondos (Backgrounds)</a>
           </li>
 		<li class="nav-item">
-            <a class="nav-link js-scroll-trigger" target="_blank" href="https://imgur.com/a/zGYOd9u">XATSPACE</a>
+            <a class="nav-link js-scroll-trigger" target="_blank" href="">XATSPACE</a>
           </li>
 		<li class="nav-item">
             <a class="nav-link js-scroll-trigger" target="_blank" href="https://flic.kr/s/aHBqjzACSc">Photoshop 3D Texts</a>
